dns-320l_GPL/aMule-2.2.6/src/Parser.output
Grammar

    0 $accept: action $end

    1 action: searchexpr
    2       | TOK_ED2K_LINK
    3       | searchexpr error

    4 searchexpr: and_strings
    5           | searchexpr TOK_AND searchexpr
    6           | searchexpr TOK_OR searchexpr
    7           | searchexpr TOK_NOT searchexpr
    8           | '(' searchexpr ')'
    9           | searchexpr TOK_OR error
   10           | searchexpr TOK_NOT error
   11           | '(' error
   12           | '(' searchexpr error
   13           | TOK_AND error
   14           | TOK_OR error
   15           | TOK_NOT error

   16 and_strings: TOK_STRING
   17            | and_strings TOK_STRING


Terminals, with rules where they appear

$end (0) 0
'(' (40) 8 11 12
')' (41) 8
error (256) 3 9 10 11 12 13 14 15
TOK_STRING (258) 16 17
TOK_AND (259) 5 13
TOK_OR (260) 6 9 14
TOK_NOT (261) 7 10 15
TOK_ED2K_LINK (262) 2


Nonterminals, with rules where they appear

$accept (10)
    on left: 0
action (11)
    on left: 1 2 3, on right: 0
searchexpr (12)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15, on right: 1 3 5 6 7 8 9
    10 12
and_strings (13)
    on left: 16 17, on right: 4 17


state 0

    0 $accept: . action $end

    TOK_STRING     shift, and go to state 1
    TOK_AND        shift, and go to state 2
    TOK_OR         shift, and go to state 3
    TOK_NOT        shift, and go to state 4
    TOK_ED2K_LINK  shift, and go to state 5
    '('            shift, and go to state 6

    action       go to state 7
    searchexpr   go to state 8
    and_strings  go to state 9


state 1

   16 and_strings: TOK_STRING .

    $default  reduce using rule 16 (and_strings)


state 2

   13 searchexpr: TOK_AND . error

    error  shift, and go to state 10


state 3

   14 searchexpr: TOK_OR . error

    error  shift, and go to state 11


state 4

   15 searchexpr: TOK_NOT . error

    error  shift, and go to state 12


state 5

    2 action: TOK_ED2K_LINK .

    $default  reduce using rule 2 (action)


state 6

    8 searchexpr: '(' . searchexpr ')'
   11           | '(' . error
   12           | '(' . searchexpr error

    error       shift, and go to state 13
    TOK_STRING  shift, and go to state 1
    TOK_AND     shift, and go to state 2
    TOK_OR      shift, and go to state 3
    TOK_NOT     shift, and go to state 4
    '('         shift, and go to state 6

    searchexpr   go to state 14
    and_strings  go to state 9


state 7

    0 $accept: action . $end

    $end  shift, and go to state 15


state 8

    1 action: searchexpr .
    3       | searchexpr . error
    5 searchexpr: searchexpr . TOK_AND searchexpr
    6           | searchexpr . TOK_OR searchexpr
    7           | searchexpr . TOK_NOT searchexpr
    9           | searchexpr . TOK_OR error
   10           | searchexpr . TOK_NOT error

    error    shift, and go to state 16
    TOK_AND  shift, and go to state 17
    TOK_OR   shift, and go to state 18
    TOK_NOT  shift, and go to state 19

    $end  reduce using rule 1 (action)


state 9

    4 searchexpr: and_strings .
   17 and_strings: and_strings . TOK_STRING

    TOK_STRING  shift, and go to state 20

    $default  reduce using rule 4 (searchexpr)


state 10

   13 searchexpr: TOK_AND error .

    $default  reduce using rule 13 (searchexpr)


state 11

   14 searchexpr: TOK_OR error .

    $default  reduce using rule 14 (searchexpr)


state 12

   15 searchexpr: TOK_NOT error .

    $default  reduce using rule 15 (searchexpr)


state 13

   11 searchexpr: '(' error .

    $default  reduce using rule 11 (searchexpr)


state 14

    5 searchexpr: searchexpr . TOK_AND searchexpr
    6           | searchexpr . TOK_OR searchexpr
    7           | searchexpr . TOK_NOT searchexpr
    8           | '(' searchexpr . ')'
    9           | searchexpr . TOK_OR error
   10           | searchexpr . TOK_NOT error
   12           | '(' searchexpr . error

    error    shift, and go to state 21
    TOK_AND  shift, and go to state 17
    TOK_OR   shift, and go to state 18
    TOK_NOT  shift, and go to state 19
    ')'      shift, and go to state 22


state 15

    0 $accept: action $end .

    $default  accept


state 16

    3 action: searchexpr error .

    $default  reduce using rule 3 (action)


state 17

    5 searchexpr: searchexpr TOK_AND . searchexpr

    TOK_STRING  shift, and go to state 1
    TOK_AND     shift, and go to state 2
    TOK_OR      shift, and go to state 3
    TOK_NOT     shift, and go to state 4
    '('         shift, and go to state 6

    searchexpr   go to state 23
    and_strings  go to state 9


state 18

    6 searchexpr: searchexpr TOK_OR . searchexpr
    9           | searchexpr TOK_OR . error

    error       shift, and go to state 24
    TOK_STRING  shift, and go to state 1
    TOK_AND     shift, and go to state 2
    TOK_OR      shift, and go to state 3
    TOK_NOT     shift, and go to state 4
    '('         shift, and go to state 6

    searchexpr   go to state 25
    and_strings  go to state 9


state 19

    7 searchexpr: searchexpr TOK_NOT . searchexpr
   10           | searchexpr TOK_NOT . error

    error       shift, and go to state 26
    TOK_STRING  shift, and go to state 1
    TOK_AND     shift, and go to state 2
    TOK_OR      shift, and go to state 3
    TOK_NOT     shift, and go to state 4
    '('         shift, and go to state 6

    searchexpr   go to state 27
    and_strings  go to state 9


state 20

   17 and_strings: and_strings TOK_STRING .

    $default  reduce using rule 17 (and_strings)


state 21

   12 searchexpr: '(' searchexpr error .

    $default  reduce using rule 12 (searchexpr)


state 22

    8 searchexpr: '(' searchexpr ')' .

    $default  reduce using rule 8 (searchexpr)


state 23

    5 searchexpr: searchexpr . TOK_AND searchexpr
    5           | searchexpr TOK_AND searchexpr .
    6           | searchexpr . TOK_OR searchexpr
    7           | searchexpr . TOK_NOT searchexpr
    9           | searchexpr . TOK_OR error
   10           | searchexpr . TOK_NOT error

    TOK_NOT  shift, and go to state 19

    $default  reduce using rule 5 (searchexpr)


state 24

    9 searchexpr: searchexpr TOK_OR error .

    $default  reduce using rule 9 (searchexpr)


state 25

    5 searchexpr: searchexpr . TOK_AND searchexpr
    6           | searchexpr . TOK_OR searchexpr
    6           | searchexpr TOK_OR searchexpr .
    7           | searchexpr . TOK_NOT searchexpr
    9           | searchexpr . TOK_OR error
   10           | searchexpr . TOK_NOT error

    TOK_AND  shift, and go to state 17
    TOK_NOT  shift, and go to state 19

    $default  reduce using rule 6 (searchexpr)


state 26

   10 searchexpr: searchexpr TOK_NOT error .

    $default  reduce using rule 10 (searchexpr)


state 27

    5 searchexpr: searchexpr . TOK_AND searchexpr
    6           | searchexpr . TOK_OR searchexpr
    7           | searchexpr . TOK_NOT searchexpr
    7           | searchexpr TOK_NOT searchexpr .
    9           | searchexpr . TOK_OR error
   10           | searchexpr . TOK_NOT error

    $default  reduce using rule 7 (searchexpr)
